--- a/docker/conda/environments/cuda11.8_examples.yml
+++ b/docker/conda/environments/cuda11.8_examples.yml
@@ -24,10 +24,15 @@ channels:
     - nvidia
     - conda-forge
 dependencies:
+    - boto3=1.24.59
     - chardet=5.0.0
     - cuml=23.02
     - dask==2023.1.1
+    - dill=0.3.6
     - distributed==2023.1.1
+    - mlflow>1.29.0,<2
+    - papermill=2.3.4
+    - s3fs==2022.8.2
     - pip:
         # tensorflow exists in conda-forge but is tied to CUDA-11.3
         - stellargraph==1.2.1
