--- a/ci/conda/recipes/morpheus/conda_build_config.yaml
+++ b/ci/conda/recipes/morpheus/conda_build_config.yaml
@@ -20,14 +20,13 @@ cxx_compiler_version:
   - 11.2
 
 cuda_compiler:
-  - nvcc
+  - cuda-nvcc
 
 cuda_compiler_version:
   - 11.8
 
 python:
-  - 3.8
-  - 3.9
+  - 3.10
 
 boost:
   - 1.74
