--- a/ci/runner/Dockerfile
+++ b/ci/runner/Dockerfile
@@ -88,6 +88,8 @@ COPY ./docker/conda/environments/cuda${CUDA_SHORT_VER}_examples.yml /tmp/conda/c
 # Install extra deps needed for gnn_fraud_detection_pipeline & ransomware_detection examples
 RUN CONDA_ALWAYS_YES=true /opt/conda/bin/mamba env update -n ${PROJ_NAME} -q --file /tmp/conda/cuda${CUDA_SHORT_VER}_examples.yml && \
     conda clean -afy && \
+    source activate ${PROJ_NAME} && \
+    pip install --ignore-requires-python stellargraph=1.2.1 && \
     rm -rf /tmp/conda
 
 # Install camouflage needed for unittests to mock a triton server
