Add pip as a dep to avoid conda warning [no ci]

--- a/docker/conda/environments/cuda11.8_examples.yml
+++ b/docker/conda/environments/cuda11.8_examples.yml
@@ -28,6 +28,7 @@ dependencies:
     - cuml=23.02
     - dask==2023.1.1
     - distributed==2023.1.1
+    - pip
     - pip:
         # tensorflow exists in conda-forge but is tied to CUDA-11.3
         - tensorflow==2.12.0
