--- a/.github/workflows/label-external-issues.yml
+++ b/.github/workflows/label-external-issues.yml
@@ -21,15 +21,26 @@ on:
       - opened
       
 env:
-  GITHUB_TOKEN: ${{ secrets.PROJECT_MANAGEMENT_PAT }}
+  GITHUB_TOKEN: ${{ github.token }}
 
 jobs:
   Label-Issue:
     runs-on: ubuntu-latest
     # Only run if the issue author is not part of NV-Morpheus
-    if: ${{ ! contains(fromJSON('["OWNER", "MEMBER", "CONTRIBUTOR"]'), github.event.issue.author_association)}}
+    if: ${{ contains(fromJSON('["OWNER", "MEMBER", "CONTRIBUTOR"]'), github.event.issue.author_association)}}
     steps: 
       - name: add-triage-label
         run: |
           issue_url=${{ github.event.issue.html_url }}
           gh issue edit ${issue_url} --add-label "Needs Triage"
+          
+  Add-Comment:
+     runs-on: ubuntu-latest
+     steps:
+       - name: add-comment-to-issue
+         run: |
+           issue_url=${{ github.event.issue.html_url }}
+           author=${{ github.event.issue.author.login }}
+           gh issue comment ${issue_url} --body "Hi ${{ author }}!
+             Thanks for submitting this issue - our team has been notified and we'll get back to you as soon as we can!
+             In the mean time, feel free to add any relevant information to this issue."
