Correct graphQL for getting author login

--- a/.github/workflows/label-external-issues.yml
+++ b/.github/workflows/label-external-issues.yml
@@ -37,7 +37,8 @@ jobs:
       - name: add-comment-to-issue
         run: |
            issue_url=${{ github.event.issue.html_url }}
-           author=${{ github.event.issue.author.login }}
+           author=${{ github.event.issue.user.login }}
+           echo ${author}
            gh issue comment ${issue_url} --body "Hi @${author}!
              
              Thanks for submitting this issue - our team has been notified and we'll get back to you as soon as we can!
