--- a/.gitattributes
+++ b/.gitattributes
@@ -6,4 +6,4 @@ tests/mock_triton_server/payloads/** filter=lfs diff=lfs merge=lfs -text
 tests/tests_data/** filter=lfs diff=lfs merge=lfs -text
 examples/basic_usage/img/** filter=lfs diff=lfs merge=lfs -text
 docs/source/img/* filter=lfs diff=lfs merge=lfs -text
-examples/digital_fingerprinting/production/morpheus/images/ filter=lfs diff=lfs merge=lfs -text
+examples/digital_fingerprinting/production/morpheus/images/** filter=lfs diff=lfs merge=lfs -text
