--- a/setup.cfg
+++ b/setup.cfg
@@ -88,6 +88,21 @@ exclude =
 max-line-length = 120
 max-doc-length = 120
 
+extend-ignore =
+    # Ignore missing docstrings __init__ methods as we document those on the class
+    D107,
+    # D205: 1 blank line required between summary line and description (allow for a paragraph)
+    D205,
+    # D400: First line should end with a period (only works if we're adhering to D205)
+    D400,
+    # D401: First line should be in imperative mood
+    D401
+
+# Python rules ignored:
+# D107: Missing docstring in __init__ (we document those on the class)
+
+# D400: First line should end with a period (only works if we're adhering to D205)
+
 # Cython Rules ignored:
 # E999: invalid syntax (works for Python, not Cython)
 # E225: Missing whitespace around operators (breaks cython casting syntax like <int>)
