--- a/setup.cfg
+++ b/setup.cfg
@@ -98,11 +98,6 @@ extend-ignore =
     # D401: First line should be in imperative mood
     D401
 
-# Python rules ignored:
-# D107: Missing docstring in __init__ (we document those on the class)
-
-# D400: First line should end with a period (only works if we're adhering to D205)
-
 # Cython Rules ignored:
 # E999: invalid syntax (works for Python, not Cython)
 # E225: Missing whitespace around operators (breaks cython casting syntax like <int>)
@@ -119,6 +114,12 @@ per-file-ignores =
     # Cython Exclusions
     *.pyx: E999, E225, E226, E227, W503, W504
     *.pxd: E999, E225, E226, E227, W503, W504
+    # Remove some documentation requirements for tests
+    tests/*.py:
+        # D100: Missing docstring in public module
+        D100,
+        # D103: Missing docstring in public function
+        D103,
 
 [yapf]
 based_on_style = pep8
