Ignore flake8 documentation requirements for unittests

--- a/setup.cfg
+++ b/setup.cfg
@@ -118,8 +118,16 @@ per-file-ignores =
     tests/*.py:
         # D100: Missing docstring in public module
         D100,
+        # D101: Missing docstring in public class
+        D101,
+        # D102: Missing docstring in public method
+        D102,
         # D103: Missing docstring in public function
         D103,
+        # D200: One-line docstring should fit on one line with quotes
+        D200,
+        # D202: No blank lines allowed after function docstring
+        D202
 
 [yapf]
 based_on_style = pep8
