--- a/setup.cfg
+++ b/setup.cfg
@@ -91,6 +91,8 @@ max-doc-length = 120
 extend-ignore =
     # Ignore missing docstrings __init__ methods as we document those on the class
     D107,
+    # D204: 1 blank line required after class docstring
+    D204,
     # D205: 1 blank line required between summary line and description (allow for a paragraph)
     D205,
     # D400: First line should end with a period (only works if we're adhering to D205)
