--- a/pyproject.toml
+++ b/pyproject.toml
@@ -446,8 +446,10 @@ disable = [
   "too-many-arguments",
   "too-many-branches",
   "too-many-instance-attributes",
+  "too-many-lines",
   "too-many-locals",
   "too-many-nested-blocks",
+  "too-many-statements",
   "unnecessary-lambda",
   "unnecessary-pass",
   "use-symbolic-message-instead",
