--- a/docker/conda/environments/cuda11.8_dev.yml
+++ b/docker/conda/environments/cuda11.8_dev.yml
@@ -91,6 +91,7 @@ dependencies:
     - tqdm=4
     - typing_utils=0.1
     - watchdog=2.1
+    - wrapt=1.14.1 # newer versions cause an error loading the keras model for the gnn fraud detection example
     - yapf=0.32.0
     ####### Morpheus Pip Dependencies (keep sorted!) #######
     - pip:
