--- a/docker/conda/environments/cuda11.8_dev.yml
+++ b/docker/conda/environments/cuda11.8_dev.yml
@@ -75,7 +75,7 @@ dependencies:
     - pyarrow * *_cuda # Ensure we get a CUDA build. Version determined by cuDF
     - pybind11-stubgen=0.10.5
     - pydot
-    - pylint==2.17.4
+    - pylint>=2.17.4,<2.18 # 2.17.4 contains a fix for toml support
     - pytest
     - pytest-benchmark>=4.0
     - pytest-cov
@@ -91,7 +91,6 @@ dependencies:
     - tqdm=4
     - typing_utils=0.1
     - watchdog=2.1
-    - wrapt=1.14.1 # newer versions cause an error loading the keras model for the gnn fraud detection example
     - yapf=0.32.0
     ####### Morpheus Pip Dependencies (keep sorted!) #######
     - pip:
