--- a/setup.cfg
+++ b/setup.cfg
@@ -88,6 +88,20 @@ exclude =
 max-line-length = 120
 max-doc-length = 120
 
+extend-ignore =
+    # Ignore missing docstrings __init__ methods as we document those on the class
+    D107,
+    # Allow a blank line between a docstring and the code
+    D202,
+    # D204: 1 blank line required after class docstring
+    D204,
+    # D205: 1 blank line required between summary line and description (allow for a paragraph)
+    D205,
+    # D400: First line should end with a period (only works if we're adhering to D205)
+    D400,
+    # D401: First line should be in imperative mood
+    D401
+
 # Cython Rules ignored:
 # E999: invalid syntax (works for Python, not Cython)
 # E225: Missing whitespace around operators (breaks cython casting syntax like <int>)
@@ -104,6 +118,20 @@ per-file-ignores =
     # Cython Exclusions
     *.pyx: E999, E225, E226, E227, W503, W504
     *.pxd: E999, E225, E226, E227, W503, W504
+    # Remove some documentation requirements for tests
+    tests/*.py:
+        # D100: Missing docstring in public module
+        D100,
+        # D101: Missing docstring in public class
+        D101,
+        # D102: Missing docstring in public method
+        D102,
+        # D103: Missing docstring in public function
+        D103,
+        # D200: One-line docstring should fit on one line with quotes
+        D200,
+        # D202: No blank lines allowed after function docstring
+        D202
 
 [yapf]
 based_on_style = pep8
