Fix flake8 errors

--- a/setup.cfg
+++ b/setup.cfg
@@ -91,6 +91,9 @@ max-doc-length = 120
 extend-ignore =
     # Ignore missing docstrings __init__ methods as we document those on the class
     D107,
+    # Don't require quotes to be placed on the same line as a one-line docstring, useful when the docstring is close
+    # to the line limit
+    D200,
     # Allow a blank line between a docstring and the code
     D202,
     # D204: 1 blank line required after class docstring
