Tests for stages in DFP Production Example (#940)
* Adds a test for each of the stages in the DFP production example (tests for modules coming in separate PR).
* Add/fix type-hints to existing stages where missing
* Fix type-o in `DFPFileToDataFrameStage`. The type-hint and documentation specifies valid values for `MORPHEUS_FILE_DOWNLOAD_TYPE` as `["single_thread", "multiprocess", "dask", "dask_thread"]` however in practice "multiprocessing" is the value used. Updated to accept either value.
* Remove unused method `_trim_dataframe` from `DFPRollingWindowStage` this logic appears to have been moved to `CachedUserWindow.trim_dataframe`
* Fix accepted types for `DFPVizPostprocStage`
* Move nested `write_to_files` method in `DFPVizPostprocStage` to an instance method allowing it to be tested.
* Fix format detection logic in `read_file_to_df` when `FileTypes=Auto` and an instance of an fsspec opener was passed in instead of the expected file path.
* Consolidate duplicated DataFrame downloading code
* Fix bug in `PreallocatorMixin` when the incoming datatype is a `DataFrame` and not a message

Authors:
  - David Gardner (https://github.com/dagardner-nv)

Approvers:
  - Michael Demoret (https://github.com/mdemoret-nv)

URL: https://github.com/nv-morpheus/Morpheus/pull/940

--- a/docker/conda/environments/cuda11.8_examples.yml
+++ b/docker/conda/environments/cuda11.8_examples.yml
@@ -24,11 +24,17 @@ channels:
     - nvidia
     - conda-forge
 dependencies:
+    - boto3=1.24.59
     - chardet=5.0.0
     - cuml=23.02
     - dask==2023.1.1
+    - dill=0.3.6
     - distributed==2023.1.1
+    - mlflow>1.29.0,<2
+    - papermill=2.3.4
+    - s3fs==2022.8.2
     - pip
+    - wrapt=1.14.1 # ver 1.15 breaks the keras model used by the gnn_fraud_detection_pipeline
     - pip:
         # tensorflow exists in conda-forge but is tied to CUDA-11.3
         - tensorflow==2.12.0
