Fix pylint errors

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -434,11 +434,13 @@ disable = [
   "bad-inline-option",
   "deprecated-pragma",
   "file-ignored",
+  "import-error", # pylint gets confused by tests for our examples
   "import-outside-toplevel", # Allow lazy imports inside of methods
   "locally-disabled",
   "missing-class-docstring",
   "missing-function-docstring",
   "missing-module-docstring",
+  "no-member", # pylint isn't aware of some of our attrs
   "protected-access",
   "raw-checker-failed",
   "superfluous-parens",
