--- a/morpheus/_lib/CMakeLists.txt
+++ b/morpheus/_lib/CMakeLists.txt
@@ -82,6 +82,12 @@ morpheus_add_pybind11_module(messages SOURCE_FILES messages/module.cpp)
 #----------morpheus._lib.modules---------
 morpheus_add_pybind11_module(modules SOURCE_FILES modules/module.cpp)
 
+#----------morpheus._lib.doca---------
+if(MORPHEUS_SUPPORT_DOCA)
+  add_subdirectory(doca)
+
+  morpheus_add_pybind11_module(doca SOURCE_FILES doca/module.cpp LINK_TARGETS ${PROJECT_NAME}::morpheus_doca)
+endif()
 
 if (MORPHEUS_BUILD_TESTS)
   add_subdirectory(tests)
