Remove/update tests which mock MRC builder objects (#955)
* Remove tests weren't testing anything not covered in an end-to-end test, and had the possibility of triggering issue #934
* If the test was checking legitimate functionality the test was updated such that MRC internals weren't left half mocked.
* Ignore `import-error` and `no-member` errors, both of these are erroneous errors on pylints part.
* Fix what appears to be a variable name change in MRC Builder of `in_port_streams` to `to in_ports_streams`

Authors:
  - David Gardner (https://github.com/dagardner-nv)

Approvers:
  - Michael Demoret (https://github.com/mdemoret-nv)

URL: https://github.com/nv-morpheus/Morpheus/pull/955

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -434,16 +434,19 @@ disable = [
   "bad-inline-option",
   "deprecated-pragma",
   "file-ignored",
+  "import-error", # pylint gets confused by tests for our examples
   "import-outside-toplevel", # Allow lazy imports inside of methods
   "locally-disabled",
   "missing-class-docstring",
   "missing-function-docstring",
   "missing-module-docstring",
+  "no-member", # pylint isn't aware of some of our attrs issue #956
   "protected-access",
   "raw-checker-failed",
   "superfluous-parens",
   "suppressed-message",
-  "too-many-arguments", # Disable all of the "too-many-*" checks, as they are too strict for our codebase
+  "too-few-public-methods", # Disable all of the "too-*" checks, as they are too strict for our codebase
+  "too-many-arguments",
   "too-many-branches",
   "too-many-instance-attributes",
   "too-many-lines",
