POC: using the fmt lib for text formatting, doesn't belong in TestTypeUtils

--- a/morpheus/_lib/tests/CMakeLists.txt
+++ b/morpheus/_lib/tests/CMakeLists.txt
@@ -19,6 +19,7 @@ find_package(pybind11 REQUIRED)
 
 # Keep all source files sorted
 add_executable(test_libmorpheus
+
   # test_cuda.cu
   io/test_data_loader.cpp
   io/test_data_loader_registry.cpp
@@ -36,12 +37,15 @@ add_executable(test_libmorpheus
   test_type_util.cpp
 )
 
+find_package(fmt)
+
 target_link_libraries(test_libmorpheus
   PRIVATE
-    GTest::gtest
-    matx::matx
-    morpheus
-    pybind11::embed
+  GTest::gtest
+  matx::matx
+  morpheus
+  pybind11::embed
+  fmt::fmt
 )
 
 add_test(
@@ -51,15 +55,15 @@ add_test(
 
 set_target_properties(test_libmorpheus
   PROPERTIES
-    INSTALL_RPATH "$ORIGIN/.."
+  INSTALL_RPATH "$ORIGIN/.."
 )
 
 install(
-    TARGETS
-      test_libmorpheus
-    RUNTIME DESTINATION
-      "${MORPHEUS_LIB_INSTALL_DIR}/tests"
-    COMPONENT Wheel
+  TARGETS
+  test_libmorpheus
+  RUNTIME DESTINATION
+  "${MORPHEUS_LIB_INSTALL_DIR}/tests"
+  COMPONENT Wheel
 )
 
 list(POP_BACK CMAKE_MESSAGE_CONTEXT)
