Fix build issues & tests (#966)
* Restore pin for camouglage v0.9 in Dockerfile, newer versions are incompat
* Skip tests for `morpheus.utils.downloader` when `dask.distributed` is not installed.
* Install `cuda-toolkit` not `cudatoolkit`

Authors:
  - David Gardner (https://github.com/dagardner-nv)

Approvers:
  - Eli Fajardo (https://github.com/efajardo-nv)

URL: https://github.com/nv-morpheus/Morpheus/pull/966

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -284,8 +284,10 @@ RUN --mount=type=cache,id=apt,target=/var/cache/apt \
     rm -rf /var/lib/apt/lists/*
 
 # Install camouflage needed for unittests to mock a triton server
-RUN source activate morpheus &&\
-    npm install -g camouflage-server
+# Pin to v0.9 until #967 is resolved
+RUN source activate morpheus && \
+    npm install -g camouflage-server@0.9 && \
+    npm cache clean --force
 
 # Setup git to allow other users to access /workspace. Requires git 2.35.3 or
 # greater. See https://marc.info/?l=git&m=164989570902912&w=2. Only enable for
