use conda init bash

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -132,7 +132,8 @@ RUN --mount=type=cache,id=conda_pkgs,target=/opt/conda/pkgs,sharing=locked \
       python=${PYTHON_VER} && \
     # Clean and activate
     # conda clean -afy && \
-    echo ". /opt/conda/etc/profile.d/conda.sh; conda activate morpheus" >> ~/.bashrc
+    conda init bash && \
+    echo "conda activate morpheus" >> ~/.bashrc
 
 # Set the permenant conda channes to use for morpheus
 RUN source activate morpheus &&\
