Update to cuda-toolkit in release container build (#974)
PR #966 fixes new conda environment and dev container builds by replacing `cudatoolkit` with `cuda-toolkit`. This PR does the same to fix the release container build error in issue #973. Updates the conda recipe to use `cuda-toolkit`.

Fixes #973

Authors:
  - Eli Fajardo (https://github.com/efajardo-nv)
  - Michael Demoret (https://github.com/mdemoret-nv)

Approvers:
  - David Gardner (https://github.com/dagardner-nv)
  - Michael Demoret (https://github.com/mdemoret-nv)

URL: https://github.com/nv-morpheus/Morpheus/pull/974

--- a/ci/conda/recipes/morpheus/meta.yaml
+++ b/ci/conda/recipes/morpheus/meta.yaml
@@ -57,6 +57,7 @@ outputs:
         - ninja
       host:
         - cuda-cudart
+        - cuda-driver-dev
         - cudf {{ rapids_version }}
         - cython >=0.29,<0.30
         - libcudf {{ rapids_version }}
@@ -69,9 +70,6 @@ outputs:
         - rapidjson 1.1
         - scikit-build 0.17.1
         - versioneer-518
-
-        # Remove cudatoolkit once `mamba repoquery whoneeds cudatoolkit` is empty. For now, we need to specify a version
-        - cudatoolkit {{ cuda_version }}.*
       run:
         # Runtime only requirements. This + setup.py is the definitive runtime requirement list
         - {{ pin_compatible('cuda-cudart', min_pin='x.x', max_pin='x') }}
