Update .bashrc in container to activate morpheus conda environment (#969)
- Update `.bashrc` in container to activate `morpheus` conda environment. Dockerfile was previously using `sed` to replace existing `conda activate base` with `conda activate morpheus`. Base image no longer has `conda activate base` so now just appending `conda activate morpheus` to `.bashrc`.

Fixes #968

Authors:
  - Eli Fajardo (https://github.com/efajardo-nv)

Approvers:
  - Michael Demoret (https://github.com/mdemoret-nv)

URL: https://github.com/nv-morpheus/Morpheus/pull/969

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -132,7 +132,8 @@ RUN --mount=type=cache,id=conda_pkgs,target=/opt/conda/pkgs,sharing=locked \
       python=${PYTHON_VER} && \
     # Clean and activate
     # conda clean -afy && \
-    sed -i 's/conda activate base/conda activate morpheus/g' ~/.bashrc
+    conda init bash && \
+    echo "conda activate morpheus" >> ~/.bashrc
 
 # Set the permenant conda channes to use for morpheus
 RUN source activate morpheus &&\
