--- a/ci/runner/Dockerfile
+++ b/ci/runner/Dockerfile
@@ -37,7 +37,7 @@ SHELL ["/bin/bash",  "-c"]
 RUN apt update && \
     DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC \
     apt install --no-install-recommends -y \
-        libnuma1 && \
+    libnuma1 && \
     apt clean && \
     rm -rf /var/lib/apt/lists/*
 
@@ -80,11 +80,12 @@ ARG CUDA_SHORT_VER
 RUN apt update && \
     DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC \
     apt install --no-install-recommends -y \
-        openjdk-11-jre-headless && \
+    openjdk-11-jre-headless && \
     apt clean && \
     rm -rf /var/lib/apt/lists/*
 
 COPY ./docker/conda/environments/cuda${CUDA_SHORT_VER}_examples.yml /tmp/conda/cuda${CUDA_SHORT_VER}_examples.yml
+COPY ./ci/scripts/download_kafka.py /tmp/scripts/download_kafka.py
 
 # Install extra deps needed for gnn_fraud_detection_pipeline & ransomware_detection examples
 RUN CONDA_ALWAYS_YES=true /opt/conda/bin/mamba env update -n ${PROJ_NAME} -q --file /tmp/conda/cuda${CUDA_SHORT_VER}_examples.yml && \
@@ -99,9 +100,8 @@ RUN source activate ${PROJ_NAME} && \
     npm cache clean --force
 
 # Install pytest-kafka
-# Installing pytest-kafka from source instead of conda/pip as the setup.py includes helper methods for downloading Kafka
-# https://gitlab.com/karolinepauls/pytest-kafka/-/issues/9
-RUN git clone https://gitlab.com/karolinepauls/pytest-kafka.git /opt/pytest-kafka && \
-    cd /opt/pytest-kafka && \
-    source activate ${PROJ_NAME} && \
-    python setup.py develop
+# Installing pre-release of pytest-kafka containing a fix for https://gitlab.com/karolinepauls/pytest-kafka/-/issues/9
+RUN source activate ${PROJ_NAME} && \
+    pip install -i https://test.pypi.org/simple/ pytest-kafka==0.5.1.post116 && \
+    python /tmp/scripts/download_kafka.py && \
+    rm -rf /tmp/scripts
