--- a/pyproject.toml
+++ b/pyproject.toml
@@ -432,6 +432,7 @@ confidence = ["HIGH", "CONTROL_FLOW", "INFERENCE", "INFERENCE_FAILURE", "UNDEFIN
 # --disable=W".
 disable = [
   "bad-inline-option",
+  "broad-exception-caught", # Allow catching base Exception class
   "deprecated-pragma",
   "file-ignored",
   "import-error", # pylint gets confused by tests for our examples
