--- a/docker/conda/environments/cuda11.8_dev.yml
+++ b/docker/conda/environments/cuda11.8_dev.yml
@@ -96,5 +96,7 @@ dependencies:
     - pip:
         # Add additional dev dependencies here
         - docutils
+        - pytest-benchmark>=4.0
+        - pytest-kafka==0.6.0
         # Ensure all runtime requirements are installed using the requirements file
         - --requirement requirements.txt
