Revert "Move dev dependencies from requirements.txt which is shared between dev&runtime envs to the dev yaml"
This reverts commit 34b7bd5250a98c1eb57b505f3a7219866a391ffb.

--- a/docker/conda/environments/requirements.txt
+++ b/docker/conda/environments/requirements.txt
@@ -10,6 +10,8 @@ jupyterlab
 nvidia-pyindex
 # Duplicated in conda dev to ensure parity with libprotobuf
 protobuf==4.21.*
+pytest-benchmark>=4.0
+pytest-kafka==0.6.0
 torch==1.13.1+cu116
 tritonclient[all]==2.17.*
 websockets
