Install pytest-kafka via pip/pypi (#988)
* Previously we installed pytest-kafka from source to use the helper methods in setup.py to download Kafka
* With the release of v0.6.0 this is now available within the lib itself (https://gitlab.com/karolinepauls/pytest-kafka/-/issues/9)

fixes #987

Authors:
  - David Gardner (https://github.com/dagardner-nv)

Approvers:
  - Michael Demoret (https://github.com/mdemoret-nv)

URL: https://github.com/nv-morpheus/Morpheus/pull/988

--- a/ci/runner/Dockerfile
+++ b/ci/runner/Dockerfile
@@ -61,11 +61,11 @@ ARG CUDA_PKG_VER
 RUN apt update && \
     DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC \
     apt install --no-install-recommends -y \
-    cuda-nvtx-${CUDA_PKG_VER} \
-    libcublas-dev-${CUDA_PKG_VER} \
-    libcufft-dev-${CUDA_PKG_VER} \
-    libcurand-dev-${CUDA_PKG_VER} \
-    libcusolver-dev-${CUDA_PKG_VER} && \
+        cuda-nvtx-${CUDA_PKG_VER} \
+        libcublas-dev-${CUDA_PKG_VER} \
+        libcufft-dev-${CUDA_PKG_VER} \
+        libcurand-dev-${CUDA_PKG_VER} \
+        libcusolver-dev-${CUDA_PKG_VER} && \
     apt clean && \
     rm -rf /var/lib/apt/lists/*
 
@@ -85,6 +85,7 @@ RUN apt update && \
     rm -rf /var/lib/apt/lists/*
 
 COPY ./docker/conda/environments/cuda${CUDA_SHORT_VER}_examples.yml /tmp/conda/cuda${CUDA_SHORT_VER}_examples.yml
+COPY ./ci/scripts/download_kafka.py /tmp/scripts/download_kafka.py
 
 # Install extra deps needed for gnn_fraud_detection_pipeline & ransomware_detection examples
 RUN CONDA_ALWAYS_YES=true /opt/conda/bin/mamba env update -n ${PROJ_NAME} -q --file /tmp/conda/cuda${CUDA_SHORT_VER}_examples.yml && \
@@ -98,10 +99,7 @@ RUN source activate ${PROJ_NAME} && \
     npm install -g camouflage-server@0.9 && \
     npm cache clean --force
 
-# Install pytest-kafka
-# Installing pytest-kafka from source instead of conda/pip as the setup.py includes helper methods for downloading Kafka
-# https://gitlab.com/karolinepauls/pytest-kafka/-/issues/9
-RUN git clone https://gitlab.com/karolinepauls/pytest-kafka.git /opt/pytest-kafka && \
-    cd /opt/pytest-kafka && \
-    source activate ${PROJ_NAME} && \
-    python setup.py develop
+# Install Kafka
+RUN source activate ${PROJ_NAME} && \
+    python /tmp/scripts/download_kafka.py && \
+    rm -rf /tmp/scripts
