--- a/ci/conda/recipes/morpheus/meta.yaml
+++ b/ci/conda/recipes/morpheus/meta.yaml
@@ -84,7 +84,7 @@ outputs:
         - docker-py 5.0.*
         - grpcio # Version determined from cudf
         - libmrc
-        - mlflow >1.29,<2
+        - mlflow >=2.2.1,<3
         - mrc
         - networkx 3.1.*
         - numpydoc 1.4.*
