--- a/docker/conda/environments/cuda11.8_dev.yml
+++ b/docker/conda/environments/cuda11.8_dev.yml
@@ -59,7 +59,7 @@ dependencies:
     - include-what-you-use=0.18
     - isort
     - librdkafka=1.7.0
-    - mlflow>1.29,<2
+    - mlflow>=2.2.1,<3
     - mrc=23.07
     - myst-parser==1.0.0
     - networkx=3.1
