--- a/morpheus/_lib/tests/CMakeLists.txt
+++ b/morpheus/_lib/tests/CMakeLists.txt
@@ -19,7 +19,7 @@ find_package(pybind11 REQUIRED)
 
 # Keep all source files sorted
 add_executable(test_libmorpheus
-  # test_cuda.cu
+  test_cuda.cu
   io/test_data_loader.cpp
   io/test_data_loader_registry.cpp
   io/test_loaders.cpp
@@ -53,6 +53,8 @@ add_test(
 set_target_properties(test_libmorpheus
   PROPERTIES
     INSTALL_RPATH "$ORIGIN/.."
+    CUDA_STANDARD 17
+    CUDA_STANDARD_REQUIRED ON
 )
 
 install(
