Python CVE tweaks post review

--- a/models/mlflow/docker/Dockerfile
+++ b/models/mlflow/docker/Dockerfile
@@ -44,7 +44,7 @@ RUN sed -i 's/conda activate base/conda activate mlflow/g' ~/.bashrc
 SHELL ["/opt/conda/bin/conda", "run", "-n", "mlflow", "/bin/bash", "-c"]
 
 ARG TRITON_DIR=/mlflow/triton-inference-server
-ARG TRITON_VER=main
+ARG TRITON_VER=r23.05
 
 RUN mkdir ${TRITON_DIR} && \
     cd ${TRITON_DIR} && \
@@ -57,12 +57,6 @@ RUN mkdir ${TRITON_DIR} && \
 
 RUN ln -sf ${TRITON_DIR}/server/deploy/mlflow-triton-plugin/scripts/publish_model_to_mlflow.py /mlflow && \
     mkdir /mlflow/artifacts
-
-# remedy for CVE-2015-20107
-RUN find / -name '*mailcap*.*py*' -delete
-
-# remedy for CVE-2022-42919
-RUN find / -path '*multiprocessing/util.py' -exec sed -i 's/=\s*_platform_supports_abstract_sockets()/= False/g' {} +
 
 EXPOSE 5000
 
