--- a/docker/conda/environments/cuda11.8_dev.yml
+++ b/docker/conda/environments/cuda11.8_dev.yml
@@ -19,6 +19,7 @@ channels:
     - nvidia/label/cuda-11.8.0
     - nvidia
     - nvidia/label/dev # For pre-releases of MRC. Should still default to full releases if available
+    - pytorch
     - conda-forge
 dependencies:
     ####### Morpheus Dependencies (keep sorted!) #######
@@ -82,6 +83,8 @@ dependencies:
     - python-confluent-kafka=1.7.0
     - python-graphviz
     - python=3.10
+    - pytorch=2.0.1
+    - pytorch-cuda
     - rapidjson=1.1.0
     - scikit-build=0.17.1
     - scikit-learn=1.2.2
