--- a/models/mlflow/docker/Dockerfile
+++ b/models/mlflow/docker/Dockerfile
@@ -15,7 +15,7 @@
 
 ARG FROM_IMAGE="condaforge/miniforge-pypy3"
 ARG PYTHON_VER=3.11
-ARG TAG=22.11.1-4
+ARG TAG=23.1.0-1
 FROM ${FROM_IMAGE}:${TAG} AS base
 
 WORKDIR /mlflow
@@ -44,23 +44,19 @@ RUN sed -i 's/conda activate base/conda activate mlflow/g' ~/.bashrc
 SHELL ["/opt/conda/bin/conda", "run", "-n", "mlflow", "/bin/bash", "-c"]
 
 ARG TRITON_DIR=/mlflow/triton-inference-server
-ARG TRITON_VER=r23.03
+ARG TRITON_VER=r23.05
 
 RUN mkdir ${TRITON_DIR} && \
     cd ${TRITON_DIR} && \
-    git clone -b ${TRITON_VER} --depth 1 https://github.com/triton-inference-server/server && \
+    git clone -b ${TRITON_VER} --depth 1 -n --filter=tree:0 https://github.com/triton-inference-server/server && \
     source activate mlflow && \
-    cd ${TRITON_DIR}/server/deploy/mlflow-triton-plugin && \
+    cd ${TRITON_DIR}/server && \
+    git sparse-checkout set --no-cone deploy/mlflow-triton-plugin && \
+    cd deploy/mlflow-triton-plugin && \
     pip install .
 
 RUN ln -sf ${TRITON_DIR}/server/deploy/mlflow-triton-plugin/scripts/publish_model_to_mlflow.py /mlflow && \
     mkdir /mlflow/artifacts
-
-# remedy for CVE-2015-20107
-RUN find / -name '*mailcap*.*py*' -delete
-
-# remedy for CVE-2022-42919
-RUN find / -path '*multiprocessing/util.py' -exec sed -i 's/=\s*_platform_supports_abstract_sockets()/= False/g' {} +
 
 EXPOSE 5000
 
