--- a/docker/conda/environments/cuda11.8_dev.yml
+++ b/docker/conda/environments/cuda11.8_dev.yml
@@ -35,8 +35,8 @@ dependencies:
     - cuda-compiler=11.8
     - cuda-nvml-dev=11.8
     - cuda-toolkit=11.8
-    - cudf=23.02
-    - cupy=11.6.0
+    - cudf=23.06
+    - cupy>=12.0.0
     - cxx-compiler
     - cython=0.29.24
     - datacompy=0.8
@@ -51,11 +51,11 @@ dependencies:
     - git-lfs=3.2
     - git>=2.35.3 # Needed for wildcards on safe.directory
     - glog=0.6
-    - gmock=1.10
+    - gmock>=1.13.0
     - gputil
     - grpc-cpp>=1.43
     - grpcio
-    - gtest=1.10
+    - gtest>=1.13.0
     - gxx_linux-64=11.2
     - include-what-you-use=0.18
     - isort
