--- a/docker/conda/environments/cuda11.8_examples.yml
+++ b/docker/conda/environments/cuda11.8_examples.yml
@@ -26,10 +26,10 @@ channels:
 dependencies:
     - boto3=1.24.59
     - chardet=5.0.0
-    - cuml=23.02
-    - dask==2023.1.1
+    - cuml=23.06
+    - dask>=2023.1.1
     - dill=0.3.6
-    - distributed==2023.1.1
+    - distributed>=2023.1.1
     - mlflow>=2.2.1,<3
     - papermill=2.3.4
     - s3fs==2022.8.2
